--- a/site/guide/configuration/_add-business-units.qmd
+++ b/site/guide/configuration/_add-business-units.qmd
@@ -18,11 +18,11 @@
 
 :::: {.content-visible unless-format="revealjs"}
 
-1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
+a. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
 
-1. Enter in your **[business unit name]{.smallcaps}**.
+a. Enter in your **[business unit name]{.smallcaps}**.
 
-1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+a. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 
    After you save, confirm that the business unit was added as a new entry in alphabetical order..
 
