--- a/site/guide/configuration/_add-role-to-user.qmd
+++ b/site/guide/configuration/_add-role-to-user.qmd
@@ -1,14 +1,11 @@
 :::: {.content-visible unless-format="revealjs"}
-##### Add role to user
+a. Click **{{< fa plus >}}** to open the Assign Roles menu for that user.
 
-1. Click **{{< fa plus >}}** to open the Assign Roles menu for that user.
+a. Click **{{< fa plus >}}** next to the role for each role to be assigned.
 
-1. Click **{{< fa plus >}}** next to the role for each role to be assigned.
-
-1. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
+a. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
 
 ::::
-
 
 
 :::: {.content-hidden unless-format="revealjs"}
