--- a/site/guide/configuration/_delete-role-from-user.qmd
+++ b/site/guide/configuration/_delete-role-from-user.qmd
@@ -1,12 +1,9 @@
 :::: {.content-visible unless-format="revealjs"}
-##### Delete role from user
+a. Click **{{< fa x >}}** to delete a role from a user.
 
-1. Click **{{< fa x >}}** to delete a role from a user.
-
-1. Once you confirm, that role will be removed from the user.
+a. Once you confirm, that role will be removed from the user.
 
 ::::
-
 
 
 :::: {.content-hidden unless-format="revealjs"}
