--- a/site/guide/configuration/_manage-role-permissions.qmd
+++ b/site/guide/configuration/_manage-role-permissions.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-#### Manage role permissions
+### Manage role permissions
 
 1. Click on the role whose user permissions you want to change.
 
