--- a/site/guide/configuration/_manage-role-users.qmd
+++ b/site/guide/configuration/_manage-role-users.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-#### Manage role users
+### Manage role users
 
 1. Click on the role whose users you want to manage.
 
