--- a/site/guide/configuration/manage-groups.qmd
+++ b/site/guide/configuration/manage-groups.qmd
@@ -24,7 +24,7 @@ Users must belong to a default group of `All`, and can belong to mulitple groups
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under*User Permissions, select **Groups**. 
+2. Under User Permissions, select **Groups**. 
 
 3. Groups are listed with their names and any provided descriptions. 
 
@@ -53,31 +53,35 @@ You can only remove non-default groups.
 
 ## Add or remove group members
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under User Permissions, select **Groups**. 
+2. Under User Permissions, select **Groups**.
 
-#### To add a member to a group:
+::: {.panel-tabset}
 
-1. Click **{{< fa chevron-right >}} See Details**.
+#### Add members
 
-2. Click **{{< fa plus >}} Add New Member**.
+a. Click **{{< fa chevron-right >}} See Details**.
 
-3. Select members by checking the boxes next to their names in the pop-up.
+b. Click **{{< fa plus >}} Add New Member**.
 
-4. Click **{{< fa plus >}} Add to Group**.
+c. Select members by checking the boxes next to their names in the pop-up.
+
+d. Click **{{< fa plus >}} Add to Group**.
 
    Confirm that the new member is added to the correct group.
 
-#### To remove a member from a group:
+#### Remove members
 
-1. Click **{{< fa chevron-right >}} See Details**.
+a. Click **{{< fa chevron-right >}} See Details**.
 
-2. Select members to be removed from the group by checking the boxes next to their names.
+b. Select members to be removed from the group by checking the boxes next to their names.
 
-3. Click **{{< fa user-minus >}} Remove Member**.
+c. Click **{{< fa user-minus >}} Remove Member**.
 
    After you confirm, the user will be removed from that group.
+
+:::
 
 
 <!-- FOOTNOTES -->
