--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -11,7 +11,7 @@ aliases:
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1] 
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
 
 :::
 
@@ -27,15 +27,17 @@ Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the high
 
 {{< include _manage-role-users.qmd >}}
 
+::: {.panel-tabset}
+
+#### Add role to user
+
 {{< include _add-role-to-user.qmd >}}
+
+#### Delete role from user
 
 {{< include _delete-role-from-user.qmd >}}
 
-##### Delete role from user
-
-1. Click **{{< fa x >}}** to delete a role from a user.
-
-1. Once you confirm, that role will be removed from the user.
+:::
 
 ### Rename existing roles
 
