--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -12,7 +12,7 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1] 
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
 
 :::
 
@@ -20,22 +20,27 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 
 {{< include _business-units.qmd >}}
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 1. Under Workspace, select **Organization**.
 
 1. Add, edit and delete business units as required.
 
+::: {.panel-tabset}
+
 {{< include _add-business-units.qmd >}}
 
 #### Edit business units
+
 Hover over the business unit until the **{{< fa ellipsis-vertical >}}** appears and click on it to rename or delete the unit:
 
-   - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
-   - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
+  - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
+  - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
 
 ::: {.callout-important}
 In order to delete a business unit, there must be no models attached to that unit.
+:::
+
 :::
 
 ## Manage use cases
@@ -48,6 +53,8 @@ In order to delete a business unit, there must be no models attached to that uni
 
 1. Add or and delete use cases as required.
 
+::: {.panel-tabset}
+
 {{< include _add-use-cases.qmd >}}
 
 #### Remove use cases
@@ -59,6 +66,8 @@ In order to delete a use case, there must be no models associated with it.
 1. Hover over the use case until the **{{< fa ellipsis-vertical >}}** appears and click on it.
 
 2. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
+
+:::
 
 ## Manage risk areas
 
