docs: Workflows history update (#765)
* Review workflow history

* Edit

* Proofreading

* Added instructions for resume workflows

* Clarification edits & footnotes

* Tweak

--- a/site/guide/model-workflows/_review-active-workflows.qmd
+++ b/site/guide/model-workflows/_review-active-workflows.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-Review the details for workflows active on a specific model:
+Review the details for workflows currently active on a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -14,12 +14,12 @@ Review the details for workflows active on a specific model:
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model.
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
-    - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow state is highlighted on this view.
+    - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-Review the details for workflows active on a specific model:
+Review the details for workflows currently active on a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -34,7 +34,7 @@ Review the details for workflows active on a specific model:
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model.
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
-    - **Workflow** — Overview of the entire workflow. The current workflow state is highlighted on this view.
+    - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 ::::
 
