--- a/site/guide/model-documentation/submit-for-approval.qmd
+++ b/site/guide/model-documentation/submit-for-approval.qmd
@@ -24,7 +24,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 ## Verify model status
 
-{{< include /guide/model-workflows/_review-model-workflows.qmd >}}
+{{< include /guide/model-workflows/_review-active-workflows.qmd >}}
 
 ## Advance model status
 
@@ -46,7 +46,7 @@ For example, you cannot submit a validation report for review until the model do
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Configure custom workflows](/guide/model-workflows/configure-model-workflows.qmd)
+[^2]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
