--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -18,7 +18,29 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 ## Review model workflows
 
-{{< include _review-model-workflows.qmd >}}
+### Review active workflows
+
+{{< include _review-active-workflows.qmd >}}
+
+### Review workflow history
+
+Review a timeline of workflows running or previously run on your model:
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^4]
+
+3. On the landing page of your model, locate the Workflows section. If workflows are running or have previously run on your model, you can:
+
+    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+
+    - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+        - **Active** — Workflows currently running.
+        - **Scheduled** — Workflows slated to run in the future.
+        - **Waiting** — Workflows in a {{< fa clock >}} Wait state.[^5]
+        - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.[^6]
+        - **Aborted** — Cancelled workflows.[^7]
+        - **Available** — Workflows available to be run manually.[^8]
 
 ## Initiate model workflows
 
@@ -26,11 +48,11 @@ Review workflows associated with your models, and initiate or abort workflows co
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
 :::
 
-To manually start a workflow[^4] for a specific model:
+To manually start a workflow[^9] for a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^5]
+2. Select a model or find your model by applying a filter or searching for it.[^10]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -43,18 +65,31 @@ To manually start a workflow[^4] for a specific model:
 
 6. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
 
+### Resume workflows
+
+To manually resume a workflow in a {{< fa clock >}} Wait state:[^11]
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^12]
+
+3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+
+4. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
+
+5. On the **{{< fa clock >}} Wait** step, double-click on **{{< fa arrow-right-arrow-left >}}** to advance the workflow immediately.
+
 ## Abort workflows
 
 ::: {.callout}
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to abort workflows.
 :::
 
-
-To remove a workflow from a model:
+To cancel a run of a workflow on a model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^6]
+2. Select a model or find your model by applying a filter or searching for it.[^13]
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -73,12 +108,26 @@ To remove a workflow from a model:
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]:
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^5]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
+
+[^6]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-step-types)
+
+[^7]: [Abort workflows](#abort-workflows)
+
+[^8]: [Initiate model workflows](#initiate-model-workflows)
+
+[^9]:
 
     ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
     Refer to [Configure custom workflows](configure-model-workflows.qmd) for more details.
     :::
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^11]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
+
+[^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^13]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
