--- a/site/guide/model-inventory/customize-model-inventory-layout.qmd
+++ b/site/guide/model-inventory/customize-model-inventory-layout.qmd
@@ -59,6 +59,8 @@ Once customized, you can save a view for later application.[^7]
 Saved views are unique to you and do not display for other users in your organization.
 :::
 
+::: {.panel-tabset}
+
 #### Save an inventory view
 
 You can save custom table configurations as a view to reapply at any time:
@@ -78,6 +80,8 @@ Deletion of saved views is permanent.
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 {{< include _remove-layout-view.qmd >}}
+
+:::
 
 ## What's next
 
