--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -44,6 +44,8 @@ Edit individual detail fields on a model to ensure that model details are accura
 To work with attachments on models, first add an attachment inventory field.[^5]
 :::
 
+::: {.panel-tabset}
+
 #### Add attachments to a model
 
 1. On the model's detail page, click on the header of your attachment field.
@@ -55,6 +57,8 @@ To work with attachments on models, first add an attachment inventory field.[^5]
 1. On the model's detail page, click on the header of your attachment field.
 
 {{< include _remove-attachments.qmd >}}
+
+:::
 
 ## What's next
 
