--- a/site/guide/model-inventory/view-model-activity.qmd
+++ b/site/guide/model-inventory/view-model-activity.qmd
@@ -32,23 +32,25 @@ This topic matters for model developers, model validators, and auditors.
 
 Use the top tabs to narrow down model activity.
 
+::: {.panel-tabset}
+
 #### All
 
-Default view; shows all activity.
+Default view. Shows all activity.
 
 #### Comments
 
-Shows only comments created or replied to; shows all comments by default.[^3]
+Shows only comments created or replied to. Shows only mentions by default.[^3]
 
 Comment settings
-: - Select **Show all comments** to see only comments you're mentioned in.
-- Select **Show only mentions** to show all comments again.
+: - Select **Show all comments** to show all comments.
+- Select **Show only mentions** to see only comments you're mentioned in.
 
-#### Status updates
+#### Status Updates
 
 Shows model status transitions.[^4]
 
-#### Model updates
+#### Model Updates
 
 Shows model level updates:
 
@@ -56,10 +58,11 @@ Shows model level updates:
 - Updates to model documentation, validation reports,[^6] or ongoing monitoring plans[^7]
 - Findings added, updated, or removed[^8]
 
-#### Test results
+#### Test Results
 
 Shows test results logged for your model via the {{< var validmind.developer >}}.[^9]
 
+:::
 
 ## What's next
 
