--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -37,6 +37,8 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 
 {{< include /guide/model-validation/_risk-areas.qmd >}}
 
+::: {.panel-tabset}
+
 #### Add risk areas
 
 {{< include /guide/model-validation/_add-risk-areas.qmd >}}
@@ -63,9 +65,13 @@ Any guidelines associated with a risk area will need to be deleted before the ri
 
     Once you confirm, that risk area will be removed.
 
+:::
+
 ### Manage guidelines
 
 {{< include /guide/model-validation/_validation-guidelines.qmd >}}
+
+::: {.panel-tabset}
 
 #### Add guidelines
 
@@ -97,6 +103,8 @@ You are also unable to delete any guidelines with assessments in validation repo
 
     Once you confirm, that guideline will be removed.
 
+:::
+
 ## Add guidelines to templates
 
 ::: {.callout title="To configure validation templates, you must have sufficient guideline and template permissions."}
@@ -109,7 +117,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has all these per
 
 3. Select the **Validation Report** tab, then click on the template you want to edit.
 
-4. On the template details page, click **{{< fa pencil >}} Edit Outline**.  
+4. On the template details page, click **{{< fa pencil >}} Edit Outline**.
 
 5. For the section you'd like to add a guideline to, click **{{< fa plus >}}** and select **{{< fa circle-check >}} Guideline Block** under [content]{.smallcaps}.
 
