--- a/site/guide/model-validation/review-model-documentation.qmd
+++ b/site/guide/model-validation/review-model-documentation.qmd
@@ -13,7 +13,7 @@ Use the {{< var validmind.platform >}} to review the model documentation provide
 
 - [x] {{< var link.login >}}
 - [x] A model developer has submitted model documentation for review.[^1]
-- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
+- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
 :::
 
@@ -27,6 +27,8 @@ Use the {{< var validmind.platform >}} to review the model documentation provide
 
 {{< include /guide/model-documentation/_locate-document-overview.qmd >}}
 
+::: {.panel-tabset}
+
 #### Unresolved conversations
 Hover over **{{< fa comment-dots >}} # Unresolved conversations** to see a preview of the unresolved conversation associated with the documentation section.
 
@@ -35,13 +37,15 @@ Resolve conversations directly from this popup, or click to expand the conversat
 #### Model findings
 Hover over **{{< fa triangle-exclamation >}} # Model Findings** to see a preview of model findings associated with the documentation section.
 
-Click to expand the finding. 
+Click to expand the finding.
 
 #### Completion status
 The **{{< fa check >}} #/# Done** indicator reflects the completion status of your documentation sections.
 
+:::
+
 ### Recent activity
-At the bottom of the Document Overview page, you will also see quick view of any recent documentation activity. 
+At the bottom of the Document Overview page, you will also see quick view of any recent documentation activity.
 
 - Use the top tabs to narrow down the recent activity.
 - Click on **{{< fa eye >}} See All Activity** to be taken to the **{{< fa wifi >}} Model Activity** page.
