--- a/site/guide/configuration/log-in-to-validmind.qmd
+++ b/site/guide/configuration/log-in-to-validmind.qmd
@@ -33,8 +33,9 @@ Log in to our cloud-hosted {{< var validmind.platform >}} to work with your mode
 <!-- For most users, someone with the Customer Admin role will invite you to your organization.  -->
 
 ::: {.callout}
-## Need an account for {{< var vm.product >}}?
-Signing up is FREE — {{< var link.register >}} 
+## To log in, you'll need access to a {{< var vm.product >}} account.
+
+{{< var link.register >}} 
 :::
 
 :::
