Updates to manage your profile

--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -23,26 +23,27 @@ Personalize your user experience and ensure you have access to the necessary too
 
    You can find the following on your profile page:
 
-   - Profile details 
+   - Profile details
    - Roles attached to your account
    - Groups assigned to your account
    - Onboarding and user interface preferences
    - Access keys
+   - Password reset
 
-#### Onboarding
-The {{< var vm.platform >}} provides an interactive onboarding journey right in the interface. 
+::: {.panel-tabset}
 
-You can toggle the onboarding wizard on or off at any time, as well as restart the onboarding tasks after you've completed them:
+### Onboarding
+The {{< var vm.platform >}} provides an interactive onboarding journey right in the interface. You can toggle the onboarding wizard on or off at any time, as well as restart the onboarding tasks after you've completed them:
 
-Getting started guide
-: - Toggle [**getting started guide**]{.smallcaps} on to display the interactive onboarding guide.  
-- Toggle [**getting started guide**]{.smallcaps} off to disable the interactive onboarding guide. 
+#### Getting started guide
+- Toggle [**getting started guide**]{.smallcaps} on to display the interactive onboarding guide.
+- Toggle [**getting started guide**]{.smallcaps} off to disable the interactive onboarding guide.
 
-Restart onboarding
-: 1. Under Onboarding, toggle [**getting started guide**]{.smallcaps} to on.
-2. Click **Restart** to reset your onboarding progress. 
+#### Restart onboarding
+1. Under Onboarding, ensure that [**getting started guide**]{.smallcaps} is toggled on.
+2. Click **Restart** to reset your onboarding progress.
 
-#### Dark mode
+### User Interface Preferences
 
 Under User Interface Preferences, you can switch between the dark and light modes of the {{< var validmind.platform >}}:
 
@@ -51,13 +52,26 @@ Under User Interface Preferences, you can switch between the dark and light mode
 
 The selected theme setting is saved to your user profile and applied across all devices where you log in.
 
-#### Access keys
+### Localization
 
-View your API and secret keys under Access Keys:
+Set the **[date format]{.smallcaps}** for date and datetime fields under localization.
 
-API key
-: To copy your API key, click **{{< fa clipboard >}} Copy to Clipboard**.
+### Access Keys
 
-Secret key
-: - To copy your secret key, click **{{< fa clipboard >}} Copy to Clipboard**.
+View your [api key]{.smallcaps} and [secret key]{.smallcaps} under Access Keys:
+
+#### [api key]{.smallcaps}
+To copy your API key, click **{{< fa clipboard >}} Copy to Clipboard**.
+
+#### [secret key]{.smallcaps}
+- To copy your secret key, click **{{< fa clipboard >}} Copy to Clipboard**.
 - To reveal your secret key, click **{{< fa eye >}} Reveal**.
+
+### Change Password
+
+To change your password:
+
+1. Enter a new password in **[new password]{.smallcaps}**, or click **Generate strong password** to automatically generate a suggested password.
+2. Click **Update Password** to apply the new password.
+
+:::
