--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -126,9 +126,9 @@ Removing a widget from a dashboard will not delete the linked view or analytics 
 
 [^2]: [Manage dashboards](#manage-dashboards)
 
-[^3]: [Customize model inventory layout](/guide/model-inventory/customize-model-inventory-layout.qmd#manage-custom-inventory-views)
+[^3]: [Manage custom inventory views](/guide/model-inventory/customize-model-inventory-layout.qmd#manage-custom-inventory-views)
 
-[^4]: [View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)
+[^4]: [Customize model findings layout](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)
 
 [^5]: [Working with analytics](/guide/reporting/working-with-analytics.qmd)
 
