--- a/site/guide/model-documentation/submit-for-approval.qmd
+++ b/site/guide/model-documentation/submit-for-approval.qmd
@@ -16,17 +16,13 @@ When you're ready, verify your workflow's status, and then submit your model doc
 - [x] The approval workflow has been configured by an administrator.[^2]
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
-::: {.callout title="To configure workflow states and transitions, you must have sufficient workflow permissions."}
-By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permissions.
 :::
 
-:::
-
-## Verify workflow status
+## Verify workflows
 
 {{< include /guide/model-workflows/_review-active-workflows.qmd >}}
 
-## Advance workflow status
+## Advance workflows
 
 {{< include /guide/model-workflows/_transition-model-workflows.qmd >}}
 
