--- a/site/guide/model-workflows/_add-new-workflows.qmd
+++ b/site/guide/model-workflows/_add-new-workflows.qmd
@@ -11,7 +11,7 @@ To add a new blank workflow:
 
 1. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
-    - **Manually** — Start this workflow manually.^[[Manage model workflows](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows)]
+    - **Manually** — Start this workflow manually.^[[Initiate model workflows](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows)]
     - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^longnote]
     - **On Model Field Change** — Start this workflow on a change to a specific model inventory field.^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)]
 
