--- a/site/guide/model-workflows/_review-active-workflows.qmd
+++ b/site/guide/model-workflows/_review-active-workflows.qmd
@@ -1,4 +1,6 @@
 :::: {.content-visible unless-format="revealjs"}
+Workflows are configured by an administrator in advance. When transitioning a workflow, verify that the workflow steps reflect your organization's requirements for that part of the model lifecycle.
+
 To review the details for workflows currently active on a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
@@ -19,6 +21,8 @@ To review the details for workflows currently active on a specific model:
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
+Workflows are configured by an administrator in advance. When transitioning a workflow, verify that the workflow steps reflect your organization's requirements for that part of the model lifecycle.
+
 To review the details for workflows currently active on a specific model:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
