--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -110,9 +110,9 @@ To cancel a run of a workflow on a model:
 
 [^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
+[^5]: [Conditional requirements](setting-up-model-workflows.qmd#conditional-requirements)
 
-[^6]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-step-types)
+[^6]: [Workflow step types](setting-up-model-workflows.qmd#workflow-step-types)
 
 [^7]: [Abort workflows](#abort-workflows)
 
@@ -126,7 +126,7 @@ To cancel a run of a workflow on a model:
 
 [^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^11]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
+[^11]: [Conditional requirements](setting-up-model-workflows.qmd#conditional-requirements)
 
 [^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
