--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -272,7 +272,7 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 
 [^13]: [Conditional requirements](#conditional-requirements)
 
-[^14]: [Configure model workflows](configure-model-workflows.qmd#link-workflow-together)
+[^14]: [Link workflow together](configure-model-workflows.qmd#link-workflow-together)
 
 [^15]: [Conditional requirements](#conditional-requirements)
 
@@ -282,7 +282,7 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 
 [^17]: Make model inventory fields **[required on registration]{.smallcaps}** to ensure necessary fields have valid values.
 
-[^18]: [Configure model workflows](configure-model-workflows.qmd#link-workflow-together)
+[^18]: [Link workflow together](configure-model-workflows.qmd#link-workflow-together)
 
 [^19]: [Workflow step types](#workflow-step-types)
 
@@ -296,4 +296,4 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 
 [^24]: [Manage model stages](manage-model-stages.qmd)
 
-[^25]: [Configure model workflows](configure-model-workflows.qmd#configure-workflow-steps)
+[^25]: [Configure workflow steps](configure-model-workflows.qmd#configure-workflow-steps)
