--- a/site/guide/model-documentation/submit-for-approval.qmd
+++ b/site/guide/model-documentation/submit-for-approval.qmd
@@ -5,7 +5,7 @@ aliases:
   - /guide/submit-for-approval.html
 ---
 
-When you're ready, verify your workflow's status, and then submit your model documentation or validation report for approval.
+{{< include /guide/model-documentation/_submit-for-approval.qmd >}}
 
 ::: {.attn}
 
