--- a/site/training/common-slides/_submit-for-approval.qmd
+++ b/site/training/common-slides/_submit-for-approval.qmd
@@ -6,8 +6,10 @@
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. Locate the **[model status]{.smallcaps}** section.
-3. Open up the status transition panel, enter your **[notes]{.smallcaps}** and any other additional inventory fields, then click **Submit**.
+2. On the landing page of your model, locate the [active workflows]{.smallcaps} section and the workflow you'd like to transition.
+3. If an action is available to your role, you'll see it listed under that workflow:
+    - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
+    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields then click **Submit**.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
