--- a/site/training/common-slides/_working-with-workflows.qmd
+++ b/site/training/common-slides/_working-with-workflows.qmd
@@ -24,7 +24,7 @@ When all the actions that can be performed by your role are completed for that m
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
-When you're ready, verify your workflow's status, and then submit your model documentation or validation report for approval:
+{{< include /guide/model-documentation/_submit-for-approval.qmd >}}
 
 ::: {.panel-tabset}
 ### Verify workflows
