--- a/site/faq/faq-inventory.qmd
+++ b/site/faq/faq-inventory.qmd
@@ -43,8 +43,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient pe
 
 ## Can I archive or delete models within {{< var vm.product >}}?
 
-- Yes, models can be archived within the {{< var validmind.platform >}} model inventory to keep your inventory accurate and up to date with your organization’s current resources.[^4]
-- Once models are archived, they can then be deleted if desired. 
+Yes, models can be archived within the {{< var validmind.platform >}} model inventory to keep your inventory accurate and up to date with your organization’s current resources.[^4]
 
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to archive and delete models.
 
