--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -45,23 +45,27 @@ To change a model's stage:
 
 4. You can then select the appropriate stage for the model.
 
+::: {.panel-tabset}
+
 #### Archive models
 
-1. Select **Archived** from the [model stage]{.smallcaps} drop-down menu.
+a. Select **Archived** from the [model stage]{.smallcaps} drop-down menu.
 
-2. Click **Save** to proceed with archival.
+b. Click **Save** to proceed with archival.
 
     Once you confirm, the model is flagged as archived in the model inventory.
 
-Archived models can be reactivated to make them available for use again in the inventory.[^8]
+Archived models can be reactivated to make them available for use again in the inventory.
 
 #### Activate models
 
-1. Select **Active** from the [model stage]{.smallcaps} drop-down menu.
+a. Select **Active** from the [model stage]{.smallcaps} drop-down menu.
 
-2. Click **Save** to proceed with activation.
+b. Click **Save** to proceed with activation.
 
     Once you confirm, the model is set to active in the model inventory.
+
+:::
 
 ## Delete models
 
@@ -73,7 +77,7 @@ If a model was created in error, or you otherwise no longer require a model to b
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^9]
+2. Select a model or find your model by applying a filter or searching for it.[^8]
 
 3. Under the [model stage]{.smallcaps} section, select **Deleted**.
 
@@ -96,6 +100,4 @@ If a model was created in error, or you otherwise no longer require a model to b
 
 [^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^8]: [Activate models](#activate-models)
-
-[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
