--- a/site/guide/model-inventory/customize-model-inventory-layout.qmd
+++ b/site/guide/model-inventory/customize-model-inventory-layout.qmd
@@ -24,13 +24,17 @@ Changes are automatically saved to your account and do not affect other users.
 
 In the left sidebar, click **{{< fa cubes >}} Inventory**:
 
-Card view
-: - To display the inventory in card view, click **Display Cards**. 
-- By default, the model name, purpose, tier, owner, and status are displayed on each card. 
+::: {.panel-tabset}
 
-Table view
-: - To display the inventory in table view, click **{{< fa table >}} Display Table**. 
+#### Card view
+- To display the inventory in card view, click **Display Cards**.
+- By default, the model name, purpose, tier, owner, and status are displayed on each card.
+
+#### Table view
+- To display the inventory in table view, click **{{< fa table >}} Display Table**.
 - Columns on the table view can be customized.[^2]
+
+:::
 
 ## Customize table view
 
@@ -97,13 +101,13 @@ Deletion of saved views is permanent.
 
 [^3]: [Working with the model inventory](working-with-model-inventory.qmd)
 
-[^4]: [Inventory display views](#inventory-display-views)
+[^4]: [Swap between views](#swap-between-views)
 
 [^5]: [Manage model inventory fields](manage-model-inventory-fields.qmd)
 
-[^6]: [Archive and delete models](archive-delete-models.qmd)
+[^6]: [Manage model stages](/guide/model-workflows/manage-model-stages.qmd)
 
-[^7]: [Save new inventory view](#save-new-view)
+[^7]: [Manage custom inventory views](#manage-custom-inventory-views)
 
 [^8]: [Customize table view](#customize-table-view)
 
