--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -19,11 +19,13 @@ Register models with {{< var vm.product >}} as the first step towards streamlini
 
 ## Steps
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
-   
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
 2. Click **{{< fa plus >}} Register Model**.
-   
+
 3. Depending on whether or not your organization has additional fields[^2] required on model registration, input the information on the Register New Model panel.
+
+::: {.panel-tabset}
 
 #### Basic Model Information
 
@@ -53,11 +55,13 @@ If no additional fields are required on registration for your models:
 
 If additional fields are required on model registration for your organization:
 
-1. First enter the basic model information,[^6] then click **Next {{< fa chevron-right >}}**.
+1. First enter the basic model information, then click **Next {{< fa chevron-right >}}**.
 
 2. Fill in your organization's required additional fields.
 
 3. Click **Register Model** to create a new entry in the model inventory.
+
+:::
 
 ## What's next
 
@@ -76,6 +80,4 @@ If additional fields are required on model registration for your organization:
 
 [^4]: [Working with templates](/guide/templates/working-with-templates.qmd)
 
-[^5]: Learn more about [vendor models](/about/glossary/glossary.qmd#vendor-model)
-
-[^6]: [Basic Model Information](#basic-model-information)
+[^5]: [Vendor model](/about/glossary/glossary.qmd#vendor-model)
