--- a/site/guide/model-inventory/view-model-activity.qmd
+++ b/site/guide/model-inventory/view-model-activity.qmd
@@ -40,7 +40,7 @@ Default view. Shows all activity.
 
 #### Comments
 
-Shows only comments created or replied to. Shows only mentions by default.[^3]
+Shows only comments created or replied to.[^3] Shows only mentions by default.
 
 Comment settings
 : - Select **Show all comments** to show all comments.
@@ -76,7 +76,7 @@ Shows test results logged for your model via the {{< var validmind.developer >}}
 
 [^2]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
 
-[^3]: [Collaborate with others (Commenting)](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+[^3]: [Commenting](/guide/model-documentation/collaborate-with-others.qmd#commenting)
 
 [^4]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
