--- a/site/guide/model-inventory/_inventory-field-types.qmd
+++ b/site/guide/model-inventory/_inventory-field-types.qmd
@@ -3,7 +3,7 @@ Single Line Text
 : Simple text value.
 
 Attachments
-: Upload supporting files for your model.^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] Files must be less than 50 MB each in size.
+: Upload supporting files for your model.^[[Manage supporting documentation](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] Files must be less than 50 MB each in size.
 
 Long Text
 : Toggle **Enable rich text formatting** to create a template using the rich text editor.
@@ -53,7 +53,7 @@ Email
 
 User
 : 
-- Select list pre-populated with users from your {{< fa book-open >}} User Directory.^[[Managing users](/guide/configuration/managing-users.qmd)]
+- Select list pre-populated with users from your {{< fa book-open >}} User Directory.^[[Manage users](/guide/configuration/manage-users.qmd)]
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
 Calculation <span id="calculation"></span> 
@@ -128,7 +128,7 @@ Email
 
 User
 : 
-- Select list pre-populated with users from your [{{< fa book-open >}} User Directory](/guide/configuration/managing-users.qmd){target="_blank"}.
+- Select list pre-populated with users from your [{{< fa book-open >}} User Directory](/guide/configuration/manage-users.qmd){target="_blank"}.
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
 Calculation <span id="calculation"></span> 
