--- a/site/guide/model-inventory/_view-model-activity-overview.qmd
+++ b/site/guide/model-inventory/_view-model-activity-overview.qmd
@@ -6,7 +6,7 @@
 - Updates to model documentation, validation reports,^[[Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)] or ongoing monitoring plans^[[Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)]
 - Test results added to your model^[[{{< var validmind.developer >}}](/developer/validmind-library.qmd)]
 - Findings added, updated, or removed^[[Working with model findings](/guide/model-validation/working-with-model-findings.qmd)]
-- Comment creation and replies^[[Collaborate with others (Commenting)](/guide/model-documentation/collaborate-with-others.qmd#commenting)]
+- Comment creation and replies^[[Commenting](/guide/model-documentation/collaborate-with-others.qmd#commenting)]
 
 ::::
 
